--- a/backend/.env.backend
+++ b/backend/.env.backend
@@ -1,3 +1,4 @@
-DB_HOST=library-db.c1eq80qg2j75.us-east-1.rds.amazonaws.com
-CORS_ALLOWED_ORIGINS=http://frontend-alb-1200732402.us-east-1.elb.amazonaws.com
-CSRF_TRUSTED_ORIGINS=http://frontend-alb-1200732402.us-east-1.elb.amazonaws.com
+DB_HOST=library-db.c700686mu29d.us-east-1.rds.amazonaws.com
+ALLOWED_HOSTS=backend-alb-794139395.us-east-1.elb.amazonaws.com
+CORS_ALLOWED_ORIGINS=http://frontend-alb-1646842719.us-east-1.elb.amazonaws.com
+CSRF_TRUSTED_ORIGINS=http://frontend-alb-1646842719.us-east-1.elb.amazonaws.com
